--- a/yenetafrontend/src/App.css
+++ b/yenetafrontend/src/App.css
@@ -10,6 +10,7 @@
   position: sticky;
   background: linear-gradient(to bottom, #4a3179 5%, #2c4083 100%);
   height: 80px;
+  top:0;
 
 }
 
@@ -25,6 +26,7 @@
   position: sticky;
   background: linear-gradient(to bottom, #4a3179 5%, #2c4083 100%);
   height: 40px;
+  top:0;
 }
 .imgStyle{
   border-radius: 50%;
