--- a/yenetafrontend/src/css/register.css
+++ b/yenetafrontend/src/css/register.css
@@ -4,6 +4,14 @@
     height: 700px;
     background-image: url("../bim.jpg");
 }
+.certificate{
+    width: 100%;
+    background-size: cover;
+    height: 700px;
+    background-image: url("../star-border.png");
+    background-repeat: no-repeat;
+    background-position: center;
+}
 .conlogin{
     width: 100%;
     height: 700px;
@@ -317,7 +325,9 @@ table tr:nth-child(odd){
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+
 }
+
 .unapprovals{
     width: 70%;
     margin: auto; 
@@ -325,3 +335,23 @@ table tr:nth-child(odd){
     align-items: center;
     justify-content: space-between;
 }
+.left{
+    margin-left: 15px;
+}
+
+.bottom{
+    margin-top: 20px;
+}
+
+.content{
+   height: 100%;
+   display: flex;
+   align-items: center;
+   text-align: center;
+   justify-content: center;
+   
+}
+.content h1{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
